# ai-financial-advisor-agents

./: Investment_Recommendation_Report.md  README.md  app.py  pyproject.toml
output/: compliance_report.md  final_report.md  market_research_report.md  portfolio_allocation_report.md  quantitative_stock_filtering_report.md  risk_assessment_report.md
src/finance/: crew.py  main.py
src/finance/config/: agents.yaml  tasks.yaml
src/finance/tools/: __init__.py  custom_tool.py  financial_scraper_tool.py  google_search_tool.py  historical_correlation_tool.py  markdown_generator_tool.py  sec_hercules_tool.py
